Fix photo alignment

--- a/static_source/sass/style.scss
+++ b/static_source/sass/style.scss
@@ -29,13 +29,23 @@ a, a:hover, a:visited {
     margin-right: 18px;
     margin-bottom: 18px;
     cursor: pointer;
+    transition: all 200ms ease-out;
+
     @include omega(3n);
+    &.gone {
+      opacity: .01;
+    }
+    &.delayed {
+      transition-delay: 0.5s;
+    }
+    .sizer { display: none; }
     .img {
       background-position: 50% 50%;
       width: 100%;
       transition: all 200ms ease-out;
       cursor: pointer;
       position: relative;
+      background-size: 100% 100%;
       &.taller {
         background-size: 100% auto;
       }
